# AINoteWriter

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: community_note_writer.yml  get_notes_written.yml
src/ainotewriter/: ai_writer.py  cli.py  config.py  gui.py  service.py
